internal/gitops/testdata/fresh-tenant-dev/expected/apps/dev/loki/sealedsecret-loki-loki-gateway-tls.yaml
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: loki-gateway-tls
  namespace: loki
spec:
  encryptedData:
    tls.crt: AgoVEfKdB5XshVhz4d7KXUzMrCn1H1MHhpXuUz81gxabB4Jf6YIo/8CuMI/ZCmNYpH6//Q2F5xoiXNBePu8roiNXtsTYEqlC5SCdkXk5xL+SFC5RCW82Li4/Yl7UiuYdv46T6mbAzbHFIAnRhGaxJrCWMJqmRTobY8jQMp53kbqYdIxE8lonLfegHNzIQ2pyVr8CmJ2sqEZdOwqBnQIEcCGdxkn1oUSn2e2mtf72F9hNBFIMYx8l1ZJpBGyr6zR/f2nozxS+JWLRimKqSWNEW+5lLHQN8ATTM3k2u58HgyScOcdXOo4K/2rAp9IXklRLt4RwEoBUjWTgu2kePDY0z2H1yoc/Mhjo7ZjaE09FtoE3iR1fdhnx25tyqGrKpTPWXsQl0Dyh20mUGdau9nLQP7gq+xOn1MBvGyy1yrnFIU/1wH3UeM8MUAKLpxId6PvxKK5XQbvhwNjXsDpcf9E5vULV34cZs9DKREgPugL [...]
    tls.key: AgsACr38pwuBCW1nZOqSvnam51f1SP59KyXM0TFeNZwzhaTDGbwiO2VchTxP0dNF45H2u5WGrnZp+uptWk7SKnGp2oPTZ2vdbFWSc7xZhoYNxW86oDKOk9QI5DO5fVtMFoEItHUNze66fK2xSjP3fz/2bnVrO0U5dDs4NluVsNNbjsNaW8GqixynQV5wov1Oy4xiYldp4A72g9O7/RcFz1zE2qyozvZtRur0R/AoAoo8006YDP24W1EAxCET3lpay3aZJz405PuEf/t4hqrZRo2jaIOPYyCLg0LN5e7YLTzEUsEv0nltonTXdGBrYBn0DHIwpUt/a8WWLIdGTXqIuQbnuWy/XmZUaIcyKFHvxj4dCRHGlbAYaPiDTy01AKQsiFTCDzLdriAiMEnK8Qq3T/kBBJRz16jf3VOSjJrb1lg0lBvaT7KH4ymVjHWRDTRtAUosk6WSZUhhJpa2ORK5Rxinos/OKV58QLo/gya [...]
  template:
    metadata:
      name: loki-gateway-tls
      namespace: loki
    type: kubernetes.io/tls
