internal/gitops/testdata/fresh-tenant-dev/expected/apps/dev/loki/service-loki-loki-gateway-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/ip-allocated-from-pool: default-pool
  name: loki-gateway-lb
  namespace: loki
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.99.3.176
  clusterIPs:
  - 10.99.3.176
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32260
    port: 3100
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/name: loki
  sessionAffinity: None
  type: LoadBalancer
